syntax = "proto3";

package org.elasticsoftware.elasticactors.serialization.protobuf;


option optimize_for = SPEED;

// WARNING:
//    you must not change the tag numbers of any existing fields.
//    you must not add or delete any required fields.
//    you may delete optional or repeated fields.
//    you may add new optional or repeated fields but you must use fresh tag numbers (i.e. tag numbers that were never
//        used in this protocol buffer, not even by deleted fields).

message InternalMessage {
  string receiver = 1;
  string sender = 2;
  string payloadClass = 3;
  bytes payload = 4;
  bytes id = 5;
  bool durable = 6;
  bool undeliverable = 7;
  repeated string receivers = 8;
  uint32 timeout = 9;
}

enum ActorType {
  PERSISTENT = 0;
  TEMP = 1;
  SERVICE = 2;
}

message CreateActorMessage {
  string actorId = 1;
  bytes initialState = 2;
  string actorClass = 3;
  string actorSystem = 4;
  ActorType type = 5;
  string affinityKey = 6;
}

message DestroyActorMessage {
  string actorRef = 1;
}

message ActivateActorMessage {
  string actorSystem = 1;
  string actorId = 2;
  ActorType type = 3;
}

message WireMessage {
  string queueName = 1;
  bytes internalMessage = 2;
}

message CancelScheduledMessageMessage {
  bytes messageId = 1;
  uint64 fireTime = 2;
}

message ActorNodeMessage {
  string receiver = 1;
  string nodeId = 2;
  string payloadClass = 3;
  bytes payload = 4;
  bool undeliverable = 5;
}

message PersistActorMessage {
  string actorRef = 1;
}